--- a/Cocktail_Recipe.htm
+++ b/Cocktail_Recipe.htm
@@ -18,7 +18,6 @@
 			<li>Mixing glass</li>
 			<li>Knife</li>
 			<li>Cutting board</li>
-			<li></li>
 		</ul>
 		
 	<h2>Alcohols</h2>
@@ -31,7 +30,6 @@
 			<li>Gin(neutral(boodles))</li>
 			<li>Vermouth: sweet(Martini: rosso)</li>
 			<li>Vermouth: dry(Martini: extra dry)</li>
-			<li></li>
 		</ul>
 		
 	<h2>Mixers</h2>
@@ -52,15 +50,8 @@
 			<li>Orange</li>
 			<li>Olive</li>
 			<li>Cherry(Luxardo)</li>
-			<li></li>
 		</ul>
-		
-	<h2></h2>
-		<ul>
-			<li></li>
-		</ul>
-
-
+<hr/>
 
 <h1>Recepies</h1>
 
@@ -92,42 +83,20 @@
 
 <h3>Ingredients:</h3>
 	<ul>
-		<li>1 cup water</li>
-		<li>1 cup white sugar</li>
-		<li>1/2 cup fresh berries</li>
+		<li>1 cup water</li>
+		<li>1 cup white sugar</li>
+		<li>1/2 cup fresh berries</li>
 	</ul>
 
 <h3>Instructions:</h3>
 	<ul>
-		<li>Bring water to a boil in a medium saucepan. Add sugar and stir until dissolved.</li>
-		<li>Add berries and basil to saucepan. Simmer 3-5 minutes.</li>
-		<li>Remove saucepan from heat, cool completely.</li>
+		<li>Bring water to a boil in a medium saucepan. Add sugar and stir until dissolved.</li>
+		<li>Add berries and basil to saucepan. Simmer 3-5 minutes.</li>
+		<li>Remove saucepan from heat, cool completely.</li>
 		<li>Strain solids from syrup and discard.</li>
 		<li>Store syrup in a lidded jar in the refrigerator for up to 2 weeks.</li>
 	</ul>
 <hr>
 
-
-
-
-
-
-<h2></h2>
-
-<h3>Ingredients:</h3>
-	<ul>
-		<li></li>
-	</ul>
-
-<h3>Optional:</h3>
-	<ul>
-		<li></li>
-	</ul>
-
-<h3>Instructions:</h3>
-	<ul>
-		<li></li>
-	</ul>
-<hr>
-	
-</body></html>
+</body>
+</html>
