--- a/Cocktail_Recipe.htm
+++ b/Cocktail_Recipe.htm
@@ -3,100 +3,129 @@
 
 <h1>Essentials</h1>
 	<h2>Tools</h2>
-		<ul>
-			<li>Muddler</li>
-			<li>Jigger(Measurement)</li>
-			<li>Shaker</li>
-			<li>Strainer</li>
-			<li>Sqese bottles</li>
-			<li>Bar spoon(tight wound weave)</li>
-			<li>Peeler</li>
-			<li>Zester</li>
-			<li>Waitors friend</li>
-			<li>Sieve</li>
-			<li>Sqeezer</li>
-			<li>Mixing glass</li>
-			<li>Knife</li>
-			<li>Cutting board</li>
-		</ul>
+	<ul>
+		<li>Muddler</li>
+		<li>Jigger(Measurement)</li>
+		<li>Shaker</li>
+		<li>Strainer</li>
+		<li>Sqese bottles</li>
+		<li>Bar spoon(tight wound weave)</li>
+		<li>Peeler</li>
+		<li>Zester</li>
+		<li>Waitors friend</li>
+		<li>Sieve</li>
+		<li>Sqeezer</li>
+		<li>Mixing glass</li>
+		<li>Knife</li>
+		<li>Cutting board</li>
+		<li></li>
+	</ul>
 		
 	<h2>Alcohols</h2>
-		<ul>
-			<li>Whiskey: burbon</li>
-			<li>Whiskey: scotch</li>
-			<li>Vodka</li>
-			<li>Tequila</li>
-			<li>Rum</li>
-			<li>Gin(neutral(boodles))</li>
-			<li>Vermouth: sweet(Martini: rosso)</li>
-			<li>Vermouth: dry(Martini: extra dry)</li>
-		</ul>
+	<ul>
+		<li>Whiskey: burbon</li>
+		<li>Whiskey: scotch</li>
+		<li>Vodka</li>
+		<li>Tequila</li>
+		<li>Rum</li>
+		<li>Gin(neutral(boodles))</li>
+		<li>Vermouth: sweet(Martini: rosso)</li>
+		<li>Vermouth: dry(Martini: extra dry)</li>
+		<li></li>
+	</ul>
 		
 	<h2>Mixers</h2>
-		<ul>
-			<li>Sprite</li>
-			<li>Cola</li>
-			<li>Fanta/Zingo</li>
-			<li>Simple syrup</li>
-			<li>Bitters(Angostura)</li>
-			<li>Club soda</li>
-			<li>Tonic water</li>
-		</ul>
+	<ul>
+		<li>Sprite</li>
+		<li>Cola</li>
+		<li>Fanta/Zingo</li>
+		<li>Simple syrup</li>
+		<li>Bitters(Angostura)</li>
+		<li>Club soda</li>
+		<li>Tonic water</li>
+	</ul>
 		
 	<h2>Garnish</h2>
-		<ul>
-			<li>Lime</li>
-			<li>Lemon</li>
-			<li>Orange</li>
-			<li>Olive</li>
-			<li>Cherry(Luxardo)</li>
-		</ul>
-<hr/>
+	<ul>
+		<li>Lime</li>
+		<li>Lemon</li>
+		<li>Orange</li>
+		<li>Olive</li>
+		<li>Cherry(Luxardo)</li>
+		<li></li>
+	</ul>
+		
+	<h2></h2>
+	<ul>
+		<li></li>
+	</ul>
+<hr>
 
 <h1>Recepies</h1>
 
 <h2>Homemade Maraschino Cherries {DIY Cocktail Cherries}</h2>
 
 <h3>Ingredients:</h3>
-	<ul>
-		<li>1 pint cherries (sweet or sour)</li>
-		<li>1 cup maraschino liqueur (or other liqueur, such as brandy, bourbon, grand marnier, amaretto, rum, etc....)</li>
-	</ul>
+<ul>
+	<li>1 pint cherries (sweet or sour)</li>
+	<li>1 cup maraschino liqueur (or other liqueur, such as brandy, bourbon, grand marnier, amaretto, rum, etc....)</li>
+</ul>
 
 <h3>Optional:</h3>
-	<ul>
-		<li>½ - 1½ cups granulated sugar (1/2 cup is just enough to take the edge of the alcohol and make a lightly sweet cherry, while 1½ cups will make a sweet, syrupy cherry -- play around to find what you like best.)</li>
-		<li>2-3 TBSP 100% tart cherry juice concentrate (this adds a boost of cherry flavor, and gives the syrup a deep red hue)</li>
-		<li>Whole spices, to taste (whole clove, star anise, cinnamon, black peppercorns, or strips of orange zest are all possibilities -- add these to the jar with the cherries, but don't let them steep too long. I recommend removing them after 5-7 days to prevent the flavor from becoming too strong.)</li>
-	</ul>
+<ul>
+	<li>½ - 1½ cups granulated sugar (1/2 cup is just enough to take the edge of the alcohol and make a lightly sweet cherry, while 1½ cups will make a sweet, syrupy cherry -- play around to find what you like best.)</li>
+	<li>2-3 TBSP 100% tart cherry juice concentrate (this adds a boost of cherry flavor, and gives the syrup a deep red hue)</li>
+	<li>Whole spices, to taste (whole clove, star anise, cinnamon, black peppercorns, or strips of orange zest are all possibilities -- add these to the jar with the cherries, but don't let them steep too long. I recommend removing them after 5-7 days to prevent the flavor from becoming too strong.)</li>
+</ul>
 
 <h3>Instructions:</h3>
-	<ul>
-		<li>Wash and pit all the cherries. You can leave the stems on or remove them.</li>
-		<li>Place the cherries in a thoroughly cleaned, tightly lidded jar. (Don't overfill your jar -- leave enough room for the alcohol to cover the cherries completely, without spilling over when you close the lid. If you pack the jar too full, and the alcohol doesn't cover them all, be sure to give the jar a flip upside down every few days to ensure the cherries get drunk evenly.)</li>
-		<li>Add the liqueur to a small saucepan, and place over medium heat. (If you're using sugar, add the sugar to the pot along with the liqueur.) Bring to a simmer, then remove from the heat. (Stir in the tart cherry juice concentrate, if using).</li>
-		<li>Pour the hot liqueur over the cherries in the jar, and close the lid. Let cool to room temperature, then place in the fridge and let sit for a minimum of two weeks. The cherries should keep for at least several months, and the flavor will get better with age.</li>
-	</ul>
+<ul>
+	<li>Wash and pit all the cherries. You can leave the stems on or remove them.</li>
+	<li>Place the cherries in a thoroughly cleaned, tightly lidded jar. (Don't overfill your jar -- leave enough room for the alcohol to cover the cherries completely, without spilling over when you close the lid. If you pack the jar too full, and the alcohol doesn't cover them all, be sure to give the jar a flip upside down every few days to ensure the cherries get drunk evenly.)</li>
+	<li>Add the liqueur to a small saucepan, and place over medium heat. (If you're using sugar, add the sugar to the pot along with the liqueur.) Bring to a simmer, then remove from the heat. (Stir in the tart cherry juice concentrate, if using).</li>
+	<li>Pour the hot liqueur over the cherries in the jar, and close the lid. Let cool to room temperature, then place in the fridge and let sit for a minimum of two weeks. The cherries should keep for at least several months, and the flavor will get better with age.</li>
+</ul>
 <hr>
 
 <h2>Berry Simple Syrup</h2>
 
 <h3>Ingredients:</h3>
-	<ul>
-		<li>1 cup water</li>
-		<li>1 cup white sugar</li>
-		<li>1/2 cup fresh berries</li>
-	</ul>
+<ul>
+	<li>1 cup water</li>
+	<li>1 cup white sugar</li>
+	<li>1/2 cup fresh berries</li>
+</ul>
 
 <h3>Instructions:</h3>
-	<ul>
-		<li>Bring water to a boil in a medium saucepan. Add sugar and stir until dissolved.</li>
-		<li>Add berries and basil to saucepan. Simmer 3-5 minutes.</li>
-		<li>Remove saucepan from heat, cool completely.</li>
-		<li>Strain solids from syrup and discard.</li>
-		<li>Store syrup in a lidded jar in the refrigerator for up to 2 weeks.</li>
-	</ul>
+<ul>
+	<li>Bring water to a boil in a medium saucepan. Add sugar and stir until dissolved.</li>
+	<li>Add berries and basil to saucepan. Simmer 3-5 minutes.</li>
+	<li>Remove saucepan from heat, cool completely.</li>
+	<li>Strain solids from syrup and discard.</li>
+	<li>Store syrup in a lidded jar in the refrigerator for up to 2 weeks.</li>
+</ul>
 <hr>
+
+
+<h2></h2>
+
+<h3>Ingredients:</h3>
+<ul>
+	<li>
+</li>
+</ul>
+
+<h3>Optional:</h3>
+<ul>
+	<li></li>
+</ul>
+
+<h3>Instructions:</h3>
+<ul>
+	<li></li>
+</ul>
+<hr>
+
 
 </body>
 </html>
