Add Smirnoff Ice

--- a/Glassware.htm
+++ b/Glassware.htm
@@ -237,7 +237,7 @@
 
   <p>We put together a dedicated article listing and describing all the different types of wine glasses</p>
 
-  <p><strong>=&gt; Click here for Types of Wine Glasses</strong></p>
+  <p><strong>=&gt; <a href="Wineglass.htm">Click here for Types of Wine Glasses</a></strong></p>
 
   <hr/>
 
@@ -247,7 +247,7 @@
 
   <p>We put together an extensive beer glass guide listing each type of beer glass along with photos of each type.</p>
 
-  <p><strong>=&gt; <a href="https://www.homestratosphere.com/types-of-beer-glasses/" target="_blank" rel="noopener">Click here for the different types of beer glasses</a></strong></p>
+  <p><strong>=&gt; <a href="Beerglass.htm">Click here for the different types of beer glasses</a></strong></p>
 
   <hr/>
 
