--- a/Cocktail_Recipe.htm
+++ b/Cocktail_Recipe.htm
@@ -139,13 +139,50 @@
 	</ul>
 <hr>
 
+<h2>Smirnoff Ice</h2>
+
+<h3>Ingredients:</h3>
+<ul>
+	<li></li>
+</ul>
+
+<h3>Optional:</h3>
+<ul>
+	<li></li>
+</ul>
+
+<h3>Instructions:</h3>
+<ul>
+	<li></li>
+</ul>
+
+The Smirnoff Ice drink that you purchase at a liquor store is a malt liquor beverage that was created in Canada. However, there is a cocktail you can mix that tastes the same as the drink.
+
+Fill the pint glass with ice.
+
+Pour two shot glasses full of Smirnoff vodka into the glass.
+
+Add 1 1/2 oz. of sour mix. Just fill the shot glass once, then pour another half-glass of sour mix and add it to the pint glass.
+
+Measure 1 1/2 oz. of lemonade the same way you did the sour mix and add it to the pint glass.
+
+Fill the rest of the glass with club soda.
+
+Sit the drink shaker on top of the pint glass, pick them up, give the drink seven or eight brisk shakes, and remove the drink shaker.
+
+Fill an 8-oz. glass with ice.
+
+Sit the drink strainer on top the pint glass with the coiled side down and pour the Smirnoff Ice into the 8-oz. glass.
+
+Garnish with a lemon wedge.
+<hr>
+
 
 <h2></h2>
 
 <h3>Ingredients:</h3>
 <ul>
-	<li>
-</li>
+	<li></li>
 </ul>
 
 <h3>Optional:</h3>
