Add more slush recipes

--- a/Cocktail_Recipe.htm
+++ b/Cocktail_Recipe.htm
@@ -140,23 +140,22 @@
 <hr>
 
 <h2>Smirnoff Ice</h2>
+	<h3>Ingredients:</h3>
+	<ul>
+		<li></li>
+	</ul>
 
-<h3>Ingredients:</h3>
-<ul>
-	<li></li>
-</ul>
+	<h3>Optional:</h3>
+	<ul>
+		<li></li>
+	</ul>
 
-<h3>Optional:</h3>
-<ul>
-	<li></li>
-</ul>
+	<h3>Instructions:</h3>
+	<ul>
+		<li></li>
+	</ul>
 
-<h3>Instructions:</h3>
-<ul>
-	<li></li>
-</ul>
-
-The Smirnoff Ice drink that you purchase at a liquor store is a malt liquor beverage that was created in Canada. However, there is a cocktail you can mix that tastes the same as the drink.
+<pre>The Smirnoff Ice drink that you purchase at a liquor store is a malt liquor beverage that was created in Canada. However, there is a cocktail you can mix that tastes the same as the drink.
 
 Fill the pint glass with ice.
 
@@ -174,45 +173,100 @@ Fill an 8-oz. glass with ice.
 
 Sit the drink strainer on top the pint glass with the coiled side down and pour the Smirnoff Ice into the 8-oz. glass.
 
-Garnish with a lemon wedge.
+Garnish with a lemon wedge.</pre>
 <hr>
 
 <h2>Bramble Smash</h2>
 
-<h3>Ingredients:</h3>
-<ul>
-	<li>2½" lemon wedges</li>
-	<li>2½" lime wedges</li>
-	<li>1 tablespoon simple syrup</li>
-	<li>4 blackberries, plus more for garnish</li>
-	<li>4 blueberries, plus more for garnish</li>
-	<li>4 raspberries, plus more for garnish</li>
-	<li>¼ cup vodka</li>
-</ul>
+	<h3>Ingredients:</h3>
+	<ul>
+		<li>2½" lemon wedges</li>
+		<li>2½" lime wedges</li>
+		<li>1 tablespoon simple syrup</li>
+		<li>4 blackberries, plus more for garnish</li>
+		<li>4 blueberries, plus more for garnish</li>
+		<li>4 raspberries, plus more for garnish</li>
+		<li>¼ cup vodka</li>
+	</ul>
 
-<h3>Instructions:</h3>
-<ul>
-	<li>Using a muddler or the handle of a wooden spoon, mash lemon wedges, lime wedges, simple syrup, 4 blackberries, 4 blueberries, and 4 raspberries in a 16-oz. mixing glass or a cocktail shaker 4–5 times just to release juices and oils. Add vodka. Strain into an old-fashioned glass. Fill halfway with crushed ice, stir, then mound more crushed ice on top. Garnish with berries.</li>
-</ul>
+	<h3>Instructions:</h3>
+	<ul>
+		<li>Using a muddler or the handle of a wooden spoon, mash lemon wedges, lime wedges, simple syrup, 4 blackberries, 4 blueberries, and 4 raspberries in a 16-oz. mixing glass or a cocktail shaker 4–5 times just to release juices and oils. Add vodka. Strain into an old-fashioned glass. Fill halfway with crushed ice, stir, then mound more crushed ice on top. Garnish with berries.</li>
+	</ul>
 <hr>
 
+<h2>Rhubarb Slush</h2>
+	<p>Yield: Apx. 7+ cups
+	A pastel-colored refreshing drink using rhubarb</p>
+	<h3>Ingredients:</h3>
+	<ul>
+		<li>1½ cups water</li>
+		<li>1½ cups sugar</li>
+		<li>3 cups rhubarb, chopped into ½” chunks (enough to yield 1 cup rhubarb juice)</li>
+		<li>2/3 cup water</li>
+		<li>Juice of ½ pink grapefruit</li>
+		<li>Juice of 1 orange</li>
+		<li>Juice of l lemon</li>
+		<li>Juice of 1 lime</li>
+		<li>1¼ cups pineapple juice, chilled</li>
+		<li>½ can frozen pink lemonade concentrate, slightly thawed</li>
+		<li>1 – 375 ml bottle gin (I used Beefeater London Dry Gin), chilled</li>
+	</ul>
+	<h3>Instructions:</h3>
+	<ul>
+		<li>Assemble ingredients.</li>
+		<li>In medium-sized saucepan, combine the 1½ cups water and 1½ cup sugar to make a traditional simple syrup. Over high heat, bring to a boil then reduce to medium-low heat and boil gently for approximately 4-5 minutes, stirring occasionally, until sugar has completely dissolved and liquid is clear. Remove from heat and let cool to room temperature, then chill.</li>
+		<li>In medium-sized saucepan combine the rhubarb and 2/3 cup water. Bring to a boil over medium-high heat then reduce to medium low and cook gently for about 10 minutes until rhubarb is broken down into a soft sauce-like consistency.</li>
+		<li>Pour rhubarb and its liquid into a fine sieve/strainer placed over a bowl or large measuring cup. Let juice drip from rhubarb, periodically pressing the rhubarb pulp with the back of a large spoon to extract as much juice as possible. This should yield 1 cup of rhubarb juice. Chill. Discard rhubarb pulp.</li>
+		<li>Prepare the citrus juices and strain twice to remove any seeds and pulp. Chill.</li>
+		<li>Into a freezable container that can hold at least 7 cups of liquid, pour the simple syrup of sugar and water. Add the chilled rhubarb, citrus, and pineapple juices along with the semi-thawed lemonade concentrate and the gin. Stir well.</li>
+		<li>Place airtight cover on container. Freeze in the coldest part of the deep freeze, stirring 2-3 times during the freezing process. Be patient as this will take 2-3 days for it to reach the desired slush consistency.</li>
+		<li>To serve, fill a tall glass about one-third to one-half full of slush and top up with a clear soda, such as lemon-lime. Garnish with a lemon wheel or wedge and serve immediately.</li>
+	</ul>
+<hr>
 
+<h2>How To Make Fruit Slushies</h2>
+	<h3>Ingredients:</h3>
+	<ul>
+		<li>1 1/2 to 2 cups	chopped fresh fruit</li>
+		<li>1 cup	ice (plus extra, depending on the type of fruit used)</li>
+		<li>1/4 cup	sparkling water</li>
+	</ul>
+
+	<h3>Optional:</h3>
+	<ul>
+		<li>Mint: Pairs wonderfully with watermelon and other tropical fruits.</li>
+		<li>Basil: Gives a lovely punch to berries!</li>
+		<li>Honey: Adds some extra sweetness, especially with tart fruits.</li>
+		<li>Lime: Fantastic with mango and pretty much everything!</li>
+		<li>Lemon: Gives a bit of a frozen lemonade feel to any slushie.</li>
+		<li>Vanilla: I added this to my mango slushie and it was heavenly!</li>
+		<li>Ginger: If you love ginger as much as I do, it goes with everything.</li>
+	</ul>
+
+	<h3>Instructions:</h3>
+	<ul>
+		<li>Wash and chop the fruit: Wash the fruit and chop it into manageable pieces. Discard any pits. You can leave peels on or remove them, as you prefer. Measure the fruit to make sure you have 1 1/2 to 2 cups total.</li>
+		<li>Combine the ingredients in a blender: Combine the chopped fruit with 1 cup of ice and the sparkling water in a high-powered blender. If you're using any flavoring extras, like mint or lemon juice, add them now.</li>
+		<li>Blend on high until the mixture is the consistency of a slushie: Blend on high speed until the ice is completely crushed and the fruit is blended. Check the texture and add more ice or more fruit as needed to reach your desired slushie consistency. If the type of fruit you're using has more water in it (such as watermelon), it might affect the amount of ice needed. The ratio of 1 1/2 cups fruit to 1 cup ice is a really great jumping-off point.</li>
+		<li>Pour into a glass and drink it up! Slushies are best if sipped right away! They will lose their slushie-like consistency the longer you wait.</li>
+	</ul>
+<hr>
 <h2></h2>
+	<h3>Ingredients:</h3>
+	<ul>
+		<li></li>
+	</ul>
 
-<h3>Ingredients:</h3>
-<ul>
-	<li></li>
-</ul>
+	<h3>Optional:</h3>
+	<ul>
+		<li></li>
+	</ul>
 
-<h3>Optional:</h3>
-<ul>
-	<li></li>
-</ul>
-
-<h3>Instructions:</h3>
-<ul>
-	<li></li>
-</ul>
+	<h3>Instructions:</h3>
+	<ul>
+		<li></li>
+	</ul>
 <hr>
 
 
